@@ -12,8 +12,8 @@ scalafmt: {
 }
  */
 
-val scalacScapegoatVersion = "2.1.2"
-val scalaCompilerVersion   = "2.13.11"
+val scalacScapegoatVersion = "2.1.3"
+val scalaCompilerVersion   = "2.13.12"
 
 val akkaHttpVersion         = "10.2.10"
 val akkaHttpCirceVersion    = "1.39.2"
@@ -21,7 +21,6 @@ val akkaCorsVersion         = "1.2.0"
 val akkaVersion             = "2.6.21"
 val alpakkaVersion          = "3.0.4"
 val apacheCompressVersion   = "1.24.0"
-val apacheIoVersion         = "1.3.2"
 val awsSdkVersion           = "2.17.184"
 val byteBuddyAgentVersion   = "1.10.17"
 val betterMonadicForVersion = "0.3.1"
@@ -77,7 +76,6 @@ lazy val alpakkaFile        = "com.lightbend.akka"           %% "akka-stream-alp
 lazy val alpakkaSse         = "com.lightbend.akka"           %% "akka-stream-alpakka-sse"  % alpakkaVersion
 lazy val alpakkaS3          = "com.lightbend.akka"           %% "akka-stream-alpakka-s3"   % alpakkaVersion
 lazy val apacheCompress     = "org.apache.commons"            % "commons-compress"         % apacheCompressVersion
-lazy val apacheIo           = "org.apache.commons"            % "commons-io"               % apacheIoVersion
 lazy val awsSdk             = "software.amazon.awssdk"        % "s3"                       % awsSdkVersion
 lazy val betterMonadicFor   = "com.olegpy"                   %% "better-monadic-for"       % betterMonadicForVersion
 lazy val byteBuddyAgent     = "net.bytebuddy"                 % "byte-buddy-agent"         % byteBuddyAgentVersion
@@ -206,6 +204,8 @@ lazy val kernel = project
   .settings(shared, compilation, coverage, release, assertJavaVersion)
   .settings(
     libraryDependencies  ++= Seq(
+      akkaActorTyped, // Needed to create content type
+      akkaHttpCore,
       caffeine,
       catsRetry,
       circeCore,
@@ -216,6 +216,7 @@ lazy val kernel = project
       log4cats,
       pureconfig,
       scalaLogging,
+      munit     % Test,
       scalaTest % Test
     ),
     addCompilerPlugin(kindProjector),
@@ -383,6 +384,7 @@ lazy val app = project
         )
       )
     },
+    Test / javaOptions    += cglibFix,
     Test / fork           := true,
     Test / test           := {
       val _ = copyPlugins.value
@@ -733,6 +735,7 @@ lazy val storage = project
     servicePackaging,
     coverageMinimumStmtTotal := 75
   )
+  .dependsOn(kernel)
   .settings(cargo := {
     import scala.sys.process._
 
@@ -752,10 +755,8 @@ lazy val storage = project
     buildInfoKeys            := Seq[BuildInfoKey](version),
     buildInfoPackage         := "ch.epfl.bluebrain.nexus.storage.config",
     Docker / packageName     := "nexus-storage",
-    javaSpecificationVersion := "1.8",
     libraryDependencies     ++= Seq(
       apacheCompress,
-      apacheIo,
       akkaHttp,
       akkaHttpCirce,
       akkaStream,
@@ -772,6 +773,7 @@ lazy val storage = project
       akkaHttpTestKit % Test,
       akkaTestKit     % Test,
       mockito         % Test,
+      munit           % Test,
       scalaTest       % Test
     ),
     cleanFiles              ++= Seq(
@@ -913,7 +915,7 @@ lazy val compilation = {
   Seq(
     scalaVersion                           := scalaCompilerVersion,
     scalacOptions                          ~= { options: Seq[String] => options.filterNot(Set("-Wself-implicit", "-Xlint:infer-any", "-Wnonunit-statement")) },
-    javaSpecificationVersion               := "11",
+    javaSpecificationVersion               := "17",
     javacOptions                          ++= Seq(
       "-source",
       javaSpecificationVersion.value,
@@ -977,12 +979,15 @@ lazy val servicePackaging = {
       else version.value
     },
     Docker / daemonUser   := "nexus",
-    dockerBaseImage       := "eclipse-temurin:11-jre",
+    dockerBaseImage       := "eclipse-temurin:17-jre",
     dockerBuildxPlatforms := Seq("linux/arm64/v8", "linux/amd64"),
     dockerExposedPorts    := Seq(8080),
     dockerUsername        := Some("bluebrain"),
     dockerUpdateLatest    := false,
-    dockerChmodType       := DockerChmodType.UserGroupWriteExecute
+    dockerChmodType       := DockerChmodType.UserGroupWriteExecute,
+    dockerEnvVars         := Map(
+      "JAVA_OPTS" -> cglibFix
+    )
   )
 }
 
@@ -1066,3 +1071,6 @@ def unitTestsWithCoverageCommandsForModules(modules: List[String]) = {
 addCommandAlias("core-unit-tests-with-coverage", unitTestsWithCoverageCommandsForModules(coreModules))
 addCommandAlias("app-unit-tests-with-coverage", unitTestsWithCoverageCommandsForModules(List("app")))
 addCommandAlias("plugins-unit-tests-with-coverage", unitTestsWithCoverageCommandsForModules(List("plugins")))
+
+// This option allows distage 1.0.10 to run on JDK 17+
+val cglibFix = "--add-opens=java.base/java.lang=ALL-UNNAMED"
